@@ -1157,6 +1157,7 @@ use DateTime;
         [ 2008, 12, 31 ],
         [ 2012, 6,  30 ],
         [ 2015, 6,  30 ],
+        [ 2016, 12, 31 ],
         ) {
         my $formatted = join '-', map { sprintf( '%02d', $_ ) } @{$date};
 
